# so-projekt-2025

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  raport_20260209_085651.txt
include/: config.h  projekt.h  structures.h  utils.h
src/: dispatcher.c  main.c  p4_express.c  truck.c  worker.c
